@@ -1,5 +1,11 @@
 2014-08-27  David Malcolm  <dmalcolm@redhat.com>
 
+	* sched-vis.c (print_pattern): Within SEQUENCE case, introduce a
+	local "seq" via a checked cast, and use methods of rtx_sequence
+	to simplify the code.
+
+2014-08-27  David Malcolm  <dmalcolm@redhat.com>
+
 	* resource.c (mark_referenced_resources): Strengthen local
 	"sequence" from rtx to rtx_sequence *, adding a checked cast, and
 	using methods of rtx_sequence to clarify the code.
